updated scrollbar to detect container resize & content mutations and scrollbar keeps correct position upon resize

--- a/App/Views/Board/Kanban/kanban.less
+++ b/App/Views/Board/Kanban/kanban.less
@@ -33,7 +33,7 @@ body{overflow:hidden;}
             .drag{position:relative;}
             &.hovering{height:40px;}
         }
-        .item{width:216px; box-shadow:@shadow-sm; border-radius:4px; background-color:#ffffff; padding:8px 20px 8px 8px; margin:7px 0; overflow:hidden; cursor:pointer;
+        .item{width:216px; box-shadow:@shadow-sm; border-radius:4px; background-color:#ffffff; padding:8px; margin:7px 0; overflow:hidden; cursor:pointer;
             .title{font-size:15px; font-weight:400; line-height:1.5; white-space:normal; width: 100%; display: inline-block;}
             &.dragging{transform:rotate(7deg); z-index:100; box-shadow:@shadow;}
         }
